Change background on mobile correctly try 5

--- a/papi/style.css
+++ b/papi/style.css
@@ -5,6 +5,7 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: bottom; 
+  height: 100%; 
 }
 
 .bg_mobile{
@@ -18,7 +19,7 @@ body{
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
 }
 
 .box{
